manifests/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: r15cookieblog
spec: {}
status: {}
