manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: r15cookieblog
  labels:
    app: r15cookieblog
spec:
  replicas: 1
  selector:
    matchLabels:
      app: r15cookieblog
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  template:
    metadata:
      labels:
        app: r15cookieblog
    spec:
      containers:
      - name: r15cookieblog
        image: ssmiller25/r15cookieblog:latest
        imagePullPolicy: Always
        resources:
          limits:
            cpu: "500m"
            memory: "128Mi"
          requests:
            cpu: "50m"
            memory: "64Mi"
        ports:
        - containerPort: 80
        livenessProbe:
          httpGet:
            # Moving to JUST root...static page
            path: /
            port: 80
          initialDelaySeconds: 10
          timeoutSeconds: 1
