manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: r15cookieblog
  labels:
    app: r15cookieblog
spec:
  type: ClusterIP
  selector:
    app: r15cookieblog
  ports:
  - protocol: TCP
    port: 80
    name: http
